# devcontainers

./: make.py  pyproject.toml  settings.py
base/: devcontainer.json
c/.devcontainer/: Dockerfile  devcontainer.json
jupyter-book/alpine/: Dockerfile  pyproject.toml
jupyter-book/alpine2/: Dockerfile  pyproject.toml
latex/: Dockerfile  devcontainer.json
mp2i/: Dockerfile
ocaml/: devcontainer.json
ocaml-devcontainer/: Dockerfile  Makefile
ocaml-devcontainer/.devcontainer/: devcontainer.json
ocaml-jupyter/alpine/: Dockerfile
ocaml-jupyter/debian/: Dockerfile
ocaml-latex/: Dockerfile  devcontainer.json
ocaml-latex/alpine/: Dockerfile
ocaml-latex/debian/: Dockerfile
ocaml/alpine/: Dockerfile
ocaml/debian/: Dockerfile
poetry/: Dockerfile  Makefile  devcontainer.json
poetry-latex/: Dockerfile  devcontainer.json
poetry/.devcontainer/: devcontainer.json
poetry/alpine/: Dockerfile  devcontainer.json
poetry/debian/: Dockerfile  devcontainer.json
