[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier"]

[tool.poetry.dependencies]
qfutils = {git = "https://github.com/fortierq/qfutils"}
python = "^3.10"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
