[tool.poetry]
name = "jupyter-book-image"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier"]

[tool.poetry.dependencies]
jupyter-book = {git = "https://github.com/fortierq/jupyter-book"}
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
